--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <main>
+        <div class="head">
+            ROCK PAPER SCISSOR
+        </div>
     <div class="choices">
         <img src="./images/rock.png" alt="" id="rock">
         <img src="./images/paper.png" alt="" id="paper">
